# ThreadPilot

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  GITHUB_ISSUE.md  README.md  SECURITY.md  TODO.txt  generate_data.sh  pyproject.toml
docs/: PERSONALIZED_DMS.md
fixtures/: slack_mock.json  slack_mock.json.backup
kiro/: design.md  requirements.md
scripts/: demo_personalized_dms.py  demo_run.py  feedback_listener.py  generate_synthetic_data.py  run_feedback_simulation.py  seed_channels.py  send_dm_bot.py  set_persona.py
src/daily_digest/: __init__.py  config.py  distributor.py  formatter.py  generate_data.py  main.py  message_aggregator.py  observability.py  orchestrator.py  slack_client.py  state.py
src/daily_digest/agents/: __init__.py  base.py  dependency_linker.py  team_analyzer.py
src/daily_digest/feedback/: __init__.py  feedback_metrics.py  feedback_processor.py  feedback_store.py  prompt_enhancer.py
src/daily_digest/memory/: __init__.py  graph.py  store.py
src/daily_digest/models/: __init__.py  dependencies.py  events.py
src/daily_digest/personalization/: __init__.py  personas.py  ranker.py
src/daily_digest/simulation/: __init__.py  evaluator.py  feedback_simulator.py
tests/: conftest.py  test_agents.py  test_aggregator.py  test_personalization.py  test_pipeline.py  test_proof_claims.py
