[tool.poetry]
name = "daily-digest"
version = "0.1.0"
description = "Daily Digest PoC - Multi-team Slack summarizer using LangChain agents"
authors = ["Abhinav Prakash"]
readme = "README.md"
packages = [{include = "daily_digest", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
slack-sdk = "^3.21.3"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
flask = "^3.0.0"
google-genai = "^1.57.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
daily-digest = "daily_digest.main:cli"
generate-data = "daily_digest.generate_data:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
